# AdventOfCode2024

./: .gitmodules  CMakeLists.txt  Helpers.h  Point.h  README.md  Timer.h  main.cpp  makefile
Day1/: Day1.h  Part1.cpp  Part2.cpp
Day10/: Day10.h  Part1.cpp  Part2.cpp
Day11/: Day11.h  Part1.cpp  Part2.cpp
Day12/: Day12.h  GardenPlot.h  Part1.cpp  Part2.cpp
Day13/: ClawMachine.h  Day13.h  Part1.cpp  Part2.cpp
Day14/: Day14.h  Part1.cpp  Part2.cpp  Robot.h
Day15/: Day15.h  Part1.cpp  Part2.cpp
Day16/: Day16.h  Part1.cpp  Part2.cpp  PointScore.h
Day17/: Day17.h  Part1.cpp  Part2.cpp
Day18/: Day18.h  Part1.cpp  Part2.cpp  PointNode.h  PointScore.h
Day19/: Day19.h  Part1.cpp  Part2.cpp
Day2/: Day2.h  Part1.cpp  Part2.cpp
Day20/: Day20.h  Part1.cpp  Part2.cpp
Day21/: Day21.h  Part1.cpp  Part2.cpp
Day22/: Day22.h  Part1.cpp  Part2.cpp
Day23/: Day23.h  Node.h  Part1.cpp  Part2.cpp
Day24/: Day24.h  Part1.cpp  Part2.cpp
Day25/: Day25.h  Part1.cpp  Part2.cpp
Day3/: Day3.h  Part1.cpp  Part2.cpp
Day4/: Day4.h  Part1.cpp  Part2.cpp
Day5/: Day5.h  Part1.cpp  Part2.cpp
Day6/: Day6.h  Part1.cpp  Part2.cpp
Day7/: Day7.h  Part1.cpp  Part2.cpp
Day8/: Day8.h  Part1.cpp  Part2.cpp
Day9/: Day9.h  Part1.cpp  Part2.cpp
Templates/: DayX.h  PartY.cpp
