cmake_minimum_required(VERSION 3.30)
project(2024)

set(CMAKE_CXX_STANDARD 23)

add_executable(2024 main.cpp
        Helpers.h
        Point.h
        Day1/Day1.h
        Day1/Part1.cpp
        Day1/Part2.cpp
        Day2/Day2.h
        Day2/Part1.cpp
        Day2/Part2.cpp
        Day3/Day3.h
        Day3/Part1.cpp
        Day3/Part2.cpp
        Day4/Day4.h
        Day4/Part1.cpp
        Day4/Part2.cpp
        Day5/Day5.h
        Day5/Part1.cpp
        Day5/Part2.cpp
Day6/Day6.h
        Day6/Part1.cpp
        Day6/Part2.cpp
        Timer.h
        Day7/Day7.h
        Day7/Part1.cpp
        Day7/Part2.cpp
Day8/Day8.h
        Day8/Part1.cpp
        Day8/Part2.cpp
Day9/Day9.h
        Day9/Part1.cpp
        Day9/Part2.cpp
Day10/Day10.h
        Day10/Part1.cpp
        Day10/Part2.cpp
Day11/Day11.h
        Day11/Part1.cpp
        Day11/Part2.cpp
####
)
