cmake_minimum_required(VERSION 3.30)
project(2024)

set(CMAKE_CXX_STANDARD 23)

add_executable(2024 main.cpp
        Helpers.h
        Point.h
        Day1/Day1.h
        Day1/Part1.cpp
        Day1/Part2.cpp
        Day2/Day2.h
        Day2/Part1.cpp
        Day2/Part2.cpp
        Day3/Day3.h
        Day3/Part1.cpp
        Day3/Part2.cpp
        Day4/Day4.h
        Day4/Part1.cpp
        Day4/Part2.cpp
        Day5/Day5.h
        Day5/Part1.cpp
        Day5/Part2.cpp
        Day6/Day6.h
        Day6/Part1.cpp
        Day6/Part2.cpp
        Timer.h
        Day7/Day7.h
        Day7/Part1.cpp
        Day7/Part2.cpp
        Day8/Day8.h
        Day8/Part1.cpp
        Day8/Part2.cpp
        Day9/Day9.h
        Day9/Part1.cpp
        Day9/Part2.cpp
        Day10/Day10.h
        Day10/Part1.cpp
        Day10/Part2.cpp
        Day11/Day11.h
        Day11/Part1.cpp
        Day11/Part2.cpp
        Day12/Day12.h
        Day12/Part1.cpp
        Day12/Part2.cpp
        Day12/GardenPlot.h
        Day13/Day13.h
        Day13/Part1.cpp
        Day13/Part2.cpp
        Day13/ClawMachine.h
        Day13/Day13.h
        Day13/Part1.cpp
        Day13/Part2.cpp
        Day14/Day14.h
        Day14/Part1.cpp
        Day14/Part2.cpp
        Day14/Robot.h
        Day15/Day15.h
        Day15/Part1.cpp
        Day15/Part2.cpp
        Day16/Day16.h
        Day16/Part1.cpp
        Day16/Part2.cpp
        Day17/Day17.h
        Day17/Part1.cpp
        Day17/Part2.cpp
        Day18/Day18.h
        Day18/Part1.cpp
        Day18/Part2.cpp
        Day19/Day19.h
        Day19/Part1.cpp
        Day19/Part2.cpp
        Day20/Day20.h
        Day20/Part1.cpp
        Day20/Part2.cpp
        ####
)
